<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExampleColorFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80D8FF">

        <ImageView
            android:id="@+id/red_apple_image"
            android:layout_width="214dp"
            android:layout_height="248dp"
            android:contentDescription="@string/red_apple_example"
            android:src="@drawable/apple"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.477"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.37" />

        <ImageView
            android:id="@+id/grey_apple_image"
            android:layout_width="215dp"
            android:layout_height="248dp"
            android:contentDescription="@string/apple"
            android:src="@drawable/apple_copy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.37" />

        <ImageView
            android:id="@+id/painter_image"
            android:layout_width="176dp"
            android:layout_height="404dp"
            android:contentDescription="@string/painter"
            android:src="@drawable/painting"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.71000004" />

        <ImageView
            android:id="@+id/redbutton_image"
            android:layout_width="79dp"
            android:layout_height="69dp"
            android:layout_marginBottom="60dp"
            android:contentDescription="@string/redbutton"
            android:src="@drawable/redbutton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.462"
            app:layout_constraintStart_toEndOf="@+id/painter_image"
            app:layout_constraintTop_toBottomOf="@+id/red_apple_image"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/click_image"
            android:layout_width="84dp"
            android:layout_height="73dp"
            android:contentDescription="@string/click"
            android:src="@drawable/click"
            android:visibility="visible"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.761"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/redbutton_image"
            app:layout_constraintVertical_bias="0.545" />

        <ImageView
            android:id="@+id/how_image"
            android:layout_width="388dp"
            android:layout_height="80dp"
            android:contentDescription="@string/how"
            android:src="@drawable/how_to_play"
            app:layout_constraintBottom_toTopOf="@+id/painter_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.19" />

        <Button
            android:id="@+id/start_button"
            android:layout_width="280dp"
            android:layout_height="46dp"
            android:text="@string/start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline14"
            app:layout_constraintStart_toStartOf="@+id/guideline13"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            app:layout_constraintVertical_bias="0.45" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.85" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>