<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80D8FF">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.9"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/enter_button"
            android:layout_width="323dp"
            android:layout_height="46dp"
            android:layout_marginBottom="64dp"
            android:text="@string/enter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintHorizontal_bias="0.871"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/painter_theme"
            android:layout_width="177dp"
            android:layout_height="124dp"
            android:layout_marginBottom="104dp"
            android:contentDescription="@string/painter_theme"
            android:src="@drawable/painter_theme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fruit_painting"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/fruit_painting"
            android:layout_width="388dp"
            android:layout_height="61dp"
            android:contentDescription="@string/fruit_painting"
            android:src="@drawable/fruit_painting"
            app:layout_constraintBottom_toTopOf="@+id/enter_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.695"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:layout_constraintVertical_bias="0.110000014" />

        <ImageView
            android:id="@+id/fruit_band"
            android:layout_width="353dp"
            android:layout_height="356dp"
            android:contentDescription="@string/fruit_band"
            android:src="@drawable/fruit_band"
            app:layout_constraintBottom_toTopOf="@+id/fruit_painting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.581" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>